# claude-code-bridge

./: .gitignore  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
claude_code_bridge/: client.py  image_utils.py  pool.py  server.py  url_utils.py
claude_proxy/: client.py  models.py  server.py
claudebridge/: client.py  server.py
tests/: conftest.py  generate_pdf_fixture.py  test_client.py  test_image_utils.py  test_model_mapping.py  test_models.py  test_pdf.py  test_pool.py  test_server.py  test_session_logger.py  test_url_utils.py  test_utils.py  test_vision.py
