[project]
name = "claudebridge"
version = "0.1.0"
description = "Bridge OpenAI tools to Claude Code SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "fpdf>=1.7.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
claudebridge = "claudebridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudebridge"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
